# quboassist

./: .gitignore  .gitigore  Cargo.toml  README.md  bandashi.py  main.py  pyproject.toml  quboassist.py  requirements.txt  sample.py
.github/workflows/: register_topypi.yml
python/quboassist/: main.py  quboassistfunc.cp313-win_amd64.pyd
quboassist/: README.md  __init__.py  main.py
quboassist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: lib.rs
