[package]
name = "quboassistfunc"
version = "0.0.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quboassistfunc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"] }
rayon = "1.10"
num_cpus = "1.16"
indexmap = "2.6.0"
fxhash = "0.2.1"

[features]
default = ["python"]
python = []

[tool.maturin]
python-source = "python"
module-name = "quboassist"