[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quboassist"
version = "0.0.17"
authors = [{ name="Enomoto Kan", email="enomotokan@gmail.com" }]
description = "Generate QUBO which can be input to dwave-neal simulated annealing solver and reconstruct the solution of the original problem."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
keywords = [
    "QUBO",
    "Simulated annealing",
]

dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/enomotokan/quboassist"

[project.scripts]
corona = "quboassist:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.maturin]
python-source = "python"
module-name = "quboassist.quboassistfunc"